--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   I'm a MERN stack web developer. My expertise is to design,
                   develop and maintain the website.
                 </p>
-                <a href="Ruvaim-Resume.pdf" class="btn" download>Download CV</a>
+                <a href="RuvaimResume.pdf" class="btn" download>Download CV</a>
               </div>
               <div class="home-img padd-15">
                 <img src="assets/ruvaim1.jpg" alt="" />
