--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
             <a href="#about" class="btn11"><i class="fa fa-user"></i>About</a>
           </li>
           <li>
-            <a href="#portfolio"><i class="fa fa-briefcase"></i>portfolio</a>
+            <a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a>
+          </li>
+          <li>
+            <a href="#acknowledgement"
+              ><i class="fa-solid fa-award"></i>Acknowledge</a
+            >
           </li>
           <li class="sidebarbtn">
             <a href="#contact" class="btn11"
@@ -113,7 +118,7 @@
                 <a href="RuvaimResume.pdf" class="btn" download>Download CV</a>
               </div>
               <div class="home-img padd-15">
-                <img src="assets/ruvaim1.jpg" alt="" />
+                <img src="assets/Ruvaim.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -436,6 +441,62 @@
           </div>
         </section>
         <!-- Portfolio section End -->
+        <!-- acknowledgement section Start -->
+        <section class="acknowledgement section" id="acknowledgement">
+          <div class="container">
+            <div class="row">
+              <div class="section-title acknowledgement-title padd-15">
+                <h2>Acknowledgement</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="acknowledgement-heading padd-15">
+                <h2>My Certificates:</h2>
+              </div>
+            </div>
+            <div class="row">
+              <!-- acknowledgement item start -->
+              <div class="acknowledgement-item padd-15">
+                <div class="acknowledgement-item-inner shodow-dark">
+                  <div class="acknowledgement-img">
+                    <img src="assets/InternshipCertificate.png" alt="" />
+                    <div class="overlay">
+                      <div class="text">Internship Completion Certificate</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- acknowledgement item end -->
+              <!-- acknowledgement item start -->
+              <div class="acknowledgement-item padd-15">
+                <div class="acknowledgement-item-inner shodow-dark">
+                  <div class="acknowledgement-img">
+                    <img src="assets/MERN-Certificate.jpg" alt="" />
+                    <div class="overlay">
+                      <div class="text">MERN Course Completion Certificate</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- acknowledgement item end -->
+              <!-- acknowledgement item start -->
+              <div class="acknowledgement-item padd-15">
+                <div class="acknowledgement-item-inner shodow-dark">
+                  <div class="acknowledgement-img">
+                    <img src="assets/ReactCertificate.jpg" alt="" />
+                    <div class="overlay">
+                      <div class="text">
+                        React Course Completion Certificate
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- acknowledgement item end -->
+            </div>
+          </div>
+        </section>
+        <!-- acknowledgement section End -->
 
         <!-- Contact section Start -->
         <section class="contact section" id="contact">
