--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
                 </div>
               </div>
               <!-- Portfolio item end -->
-              <!-- Portfolio item start -->
 
+              <!-- Portfolio item start -->
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shodow-dark">
                   <!-- <p class="portfolio-img-heading"></p> -->
@@ -416,10 +416,9 @@
                   </div>
                 </div>
               </div>
-
               <!-- Portfolio item end -->
-              <!-- Portfolio item start -->
 
+              <!-- Portfolio item start -->
               <div class="portfolio-item padd-15">
                 <div class="portfolio-item-inner shodow-dark">
                   <!-- <p class="portfolio-img-heading"></p> -->
@@ -449,7 +448,37 @@
                   </div>
                 </div>
               </div>
-
+              <!-- Portfolio item end -->
+              <!-- Portfolio item start -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shodow-dark">
+                  <!-- <p class="portfolio-img-heading"></p> -->
+                  <div class="portfolio-img">
+                    <img src="assets/memorygame.png" alt="" />
+                    <div class="overlay">
+                      <div class="text">Memory Game</div>
+                    </div>
+                  </div>
+                  <div class="portfolio-btn">
+                    <div class="icon">
+                      <a
+                        target="_blank"
+                        href="https://github.com/Ruvaim/Memory-Game"
+                        class="btn"
+                        ><i class="fa fa-brands fa-github"></i> View Repo</a
+                      >
+                    </div>
+                    <div class="icon">
+                      <a
+                        target="_blank"
+                        href="https://rk-memory-game.netlify.app/"
+                        class="btn"
+                        ><i class="fa-brands fa-chrome"></i> View Live</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- Portfolio item end -->
             </div>
           </div>
