Fixed about page issue

--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
                         <p>Website: <span>www.ruvaim.me</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Age: <span>19</span></p>
+                        <p>Email: <span>ruvaim51@gmail.com</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>Email: <span>ruvaim51@gmail.com</span></p>
+                        <p>Age: <span>19</span></p>
                       </div>
 
                       <div class="info-item padd-15">
@@ -185,7 +185,7 @@
                         <p>Degree: <span>CS</span></p>
                       </div>
                       <div class="info-item padd-15">
-                        <p>LinkedIn: <span>ruvaimkash</span></p>
+                        <p>LinkedIn: <span>ruvaim kashimji</span></p>
                       </div>
                       <div class="info-item padd-15">
                         <p>City: <span>Bhatkal</span></p>
