Added new project(RkShare)

--- a/index.html
+++ b/index.html
@@ -384,6 +384,38 @@
                 </div>
               </div>
               <!-- Portfolio item end -->
+              <!-- Portfolio item start -->
+              <div class="portfolio-item padd-15">
+                <div class="portfolio-item-inner shodow-dark">
+                  <!-- <p class="portfolio-img-heading"></p> -->
+                  <div class="portfolio-img">
+                    <img src="assets/RkShare.png" alt="" />
+                    <div class="overlay">
+                      <div class="text">Rk Share</div>
+                    </div>
+                  </div>
+                  <div class="portfolio-btn">
+                    <div class="icon">
+                      <a
+                        target="_blank"
+                        href="https://github.com/Ruvaim/RkShare-Frontend"
+                        class="btn"
+                        ><i class="fa fa-brands fa-github"></i> View Repo</a
+                      >
+                    </div>
+
+                    <div class="icon">
+                      <a
+                        target="_blank"
+                        href="https://rkshare.netlify.app/"
+                        class="btn"
+                        ><i class="fa-brands fa-chrome"></i> View Live</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Portfolio item end -->
 
               <!-- Portfolio item start -->
               <div class="portfolio-item padd-15">
