--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <a href="RuvaimResume.pdf" class="btn" download>Download CV</a>
               </div>
               <div class="home-img padd-15">
-                <img src="assets/Ruvaim.jpg" alt="" />
+                <img src="assets/rkwebprofile.jpg" alt="" />
               </div>
             </div>
           </div>
